<resources>
    <string name="app_name">Mirino</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="_0">0 %</string>
    <string name="perc"> %</string>
    <string name="mirino">Mirino</string>
    <string name="allready_have_nad_account_signin_here">All ready have an account?SignIn Here</string>
    <string name="register_new_user">Register New User</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_e_mail_login_id">Enter E-Mail (Login ID)</string>
    <string name="register_now">Register Now</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_numer_10_digit">Mobile Numer 10 Digit</string>
    <string name="login">LogIn</string>
    <string name="not_having_account_yet_click_here">Not Having Account Yet? Click Here</string>
    <string name="log_in">Log In</string>
    <string name="enter_username_e_mail">Enter Username / E-Mail</string>
    <string name="enter_pasrd">Enter Password</string>
    <string name="er_passord">Enter Password</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="input_error_password_notmatched">password and confirm password not matched</string>
    <string name="input_error_Age_invalid">Enter a valid Age.</string>
    <string name="input_error_Age">Age is required</string>
    <string name="success">Success</string>
    <string name="this_is_admin_layout">This Is Admin Layout</string>
    <string name="forgot_password_click_here">Forgot Password?Click Here</string>
    <string name="registration_success_2">Registered Successfully</string>
    <string name="recite_listen_quran">Recite/Listen Quran</string>
    <string name="change_password2">Change Password</string>
    <string name="logout">Logout</string>
    <string name="request_to_add_mosque">Request To Add Mosque</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_registered_email">Enter Registered Email</string>
    <string name="go_back_to_login">Go Back to Login.</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter New Password</string>

    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="title_activity_login_main">LoginMainActivity</string>

    <string name="title_activity_register_user">RegisterUser</string>
    <string name="build_by_lareb_shaikh">Build By Lareb Shaikh</string>

    <string name="title_activity_forgot_password2">ForgotPassword2</string>
    <string name="my_profile">My Profile</string>
    <string name="registered_users">Registered Users</string>
    <string name="jumu_ah">Jumu\'ah :</string>
    <string name="fajr">Fajr :</string>
    <string name="lon">lon:</string>
    <string name="lat">lat:</string>
    <string name="enter_mosque_name">Enter Mosque Name</string>
    <string name="hh_mm_am_pm">HH MM AM/PM</string>
    <string name="asr">Asr</string>
    <string name="juma_ah">Juma\'ah</string>
    <string name="maghrib">Maghrib</string>
    <string name="zohar">Zohar</string>
    <string name="enter_namaz_timings">Enter Namaz Timings</string>
    <string name="isha">Isha</string>
    <string name="faj">Fajr</string>
    <string name="enter_mosque_are">Enter Mosque Area</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_from_to">Map</string>
    <string name="click_to_locate_on_map">Click to Locate on Map</string>
    <string name="please_click_the_above_button_and_locate_mosque">Please Click The Above Button and Locate Mosque</string>
    <string name="your_profile">Your Profile</string>
    <string name="nam">Name  :-</string>
    <string name="age">Age  :-</string>
    <string name="mobnumer">Mobile Number :-</string>
    <string name="Emaail">E-Mail  :-</string>
    <string name="click_on_list_to_accept_or_remove_request">Click on List to Accept or Remove Request.</string>
    <string name="click_on_list_to_see_navigation_on_map">Click on List to See Navigation on Map</string>
    <string name="click_on_list_to_remove_user">Click on List to Remove User</string>
    <string name="Reset_password">Change Password</string>
    <string name="read_quran">Read Quran.</string>
    <string name="please_choose_option_to_proceed">Please Choose Option to Proceed</string>
    <string name="church">Church</string>
    <string name="temple">Temple</string>
</resources>
